tetrate/tis0503/.chainsaw-test/good-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mesh-wide-mtls
spec:
  host: "*.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
