tetrate/tis0503/.chainsaw-test/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ensure-meshwide-mtls-present
spec:
  validationFailureAction: Enforce
